2010-09-03  MIYAMUKO Katsuyuki

	* user/repo => owner/repo

	* 引数の型チェックを追加

	* api/issues.l, api/types.l: 引数名を変更: number => issue

	* api/issues.l (add-issue-label, delete-issue-label): 引数の順番を変更

2010-09-02  MIYAMUKO Katsuyuki

	* user と repo 引数にとる関数の引数を変更して以下を引数に取るようにした
	- "<user>/<repo>" という文字列
	- '("<user>" "<repo>") というリスト
	- repo 構造体

	* api/issues.l, api/types.l: issue number を引数にとる関数には
	issue 構造体も指定できるようにした。

	* api/user.l, api/repo.l, api/types.l: public-key id を引数にとる関数には
	public-key 構造体も指定できるようにした。

2010-08-31  MIYAMUKO Katsuyuki

	* api/user.l, api/gist.l: ユーザ名を引数に指定する関数には
	user 構造体も指定できるようにした。

	* api/types.l: user 構造体の name を fullname に変更。
	アクセッサが ed::user-name とかぶるのを防ぐのと
	user-login と user-name の区別を付けやすくするため。

	* api/gist-unofficial.l, api/gist.l: id を引数に指定する関数には
	gist 構造体も指定できるようにした。

	* api/type.l: fork したリポジトリを show-repo するとエラーになっていたのを修正
	(repo 構造体に source と parent を追加)。

	* api/gist-unofficial.l (gist-star-p): fork 関連の API を追加
	- fork-gist
	- gist-fork-p
	- get-gist-parent
	- list-gist-forks

	* api/gist-unofficial.l (gist-star-p): star-gist-p を gist-star-p
	に変えた

2010-08-21  MIYAMUKO Katsuyuki

	* api/gist-unofficial.l (create-gist-files, update-gist-files): 複数のファイルの
	Gist を作成・更新するための関数
	- 引数の files には gist-file 構造体のリストを指定する
	- 文字列を指定した場合はファイル名として扱う
	  - 実際のファイル名とは別の名前で Gist を作成したい場合は
	    make-gist-file-from-pathname を使う
	- 引数が 1 つの場合はわざわざリストにする必要はない
	---
	(create-gist-files "~/.xyzzy")
	(create-gist-files (list (make-gist-file-from-pathname "~/.xyzzy" :name "my-dot-xyzzy.cl")
	                         (make-gist-file-from-pathname "~/.emacs" :lang :lisp))
	                   :private t)

	* api/gist-unofficial.l (create-gist, update-gist): 1 ファイルの Gist を
	作成・更新するための関数
	- 引数の name を keyword 引数に変更
	- lang をキーワード引数に追加
	  - 拡張子または言語名を指定する（あいまいでない限り省略可能）
	  - 言語を一意に特定できない場合は error を通知
	  - 言語が不明な場合は警告を出力して txt として扱う
	---
	(let ((id (create-gist "(format t \"Hello World\")" :lang :lisp)))